# alkemy-worflow

./: .pre-commit-config.yaml  MANIFEST.in  Makefile  README.rst  alkemy_workflow.ini  aw.py  changelog.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
alkemy_workflow/: __main__.py  cli.py  clickup.py  cmds.py  config.py  exceptions.py  git.py  github.py  planner.py  utils.py
tests/: commons.py  test_clickup.py  test_cmds.py  test_cmds_ls.py  test_cwd.py  test_import.py  test_utils.py
tests/data/: headers  user.get
tests/data/api/v2/: team.get  user.get
tests/data/api/v2/folder/: 20000001.get
tests/data/api/v2/folder/20000001/: list.get
tests/data/api/v2/list/: 30000001.get  60000008.get
tests/data/api/v2/list/30000001/: task.get
tests/data/api/v2/space/: 10000001.get
tests/data/api/v2/space/10000001/: folder.get
tests/data/api/v2/task/: 99abcd99.get  99abcd99.put
tests/data/api/v2/task/99abcd99/: comment.post
tests/data/api/v2/team/11111111/: space.get  task.get
tests/data/repos/OWNER/REPO/git/: refs.post
tests/data/repos/OWNER/REPO/git/refs/heads/: main.get
