[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [ "tests" ]

[tool.black]
line-length = 132

[tool.coverage.run]
source = ["alkemy_workflow"]

[tool.coverage.report]
exclude_lines = [ "# pragma: no cover", "if TYPE_CHECKING:" ]
