[metadata]
name = alkemy_workflow
version = file: alkemy_workflow/VERSION
keywords = git, workflow
description = Alkemy Git Worflow
url = https://github.com/DLBD-Department/alkemy-worflow
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Bug Tracker = https://github.com/DLBD-Department/alkemy-worflow/issues
    Source Code = https://github.com/DLBD-Department/alkemy-worflow

[options]
zip_safe = True
include_package_data = True
python_requires = >=3.6
packages = find:
install_requires =
    backports.cached-property
    requests
    click
    importlib-resources
    pzp

[options.packages.find]
include = alkemy_workflow*
exclude =
    ez_setup
    examples
    tests

[options.extras_require]
test = pytest

[tool:pytest]
addopts = -ra -q
testpaths = tests

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 132
extend-ignore =
    E203
    E401
    W503
    W504
    E221
    E731
